--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Alex Nguyen</title>
   </head>
-  <body class="home1">
+  <body class="home2">
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -35,12 +35,11 @@
       </div>
     </nav>
 
-    <!-- Title/Front Page Text -->
-    <div class="container">
-      <h1 style="text-align:center; color:DodgerBlue;"> </h1>
-      <h1 style="text-align:center;">My name is Alex Nguyen.</h1>
-      <h2 style="text-align:center; color:gold;">I am a student attending OTC.</h2>
-      <h2 style="text-align:center; color:gold;"> This is my Bio.</h2>
-    </div>
+    <section>
+      <div>
+        <h1>
+
+      </div>
+    </section>
   </body>
 </html>
