--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav-link text-white bg-dark" href="index.html" style="text-align: left;">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white bg-dark" href="bio.html" style="text-align: center;">Bio</a>
+            <a class="nav-link text-white bg-dark" href="aboutMe.html" style="text-align: center;">Bio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white bg-dark" href="experience.html">Experiences</a>
