--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,24 +23,31 @@
               <a class="nav-link text-white bg-dark" href="index.html" style="text-align: left;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white bg-dark" href="aboutMe.html" style="text-align: center;">Bio</a>
+              <a class="nav-link text-white bg-dark" href="aboutMe.html" style="text-align: center;">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white bg-dark" href="experience.html">Experiences</a>
             </li>
-<!--            <li class="nav-item">
-              <a class="nav-link text-white bg-dark" style="text-align:right;">Alex Nguyen</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link text-white bg-dark" href="goal.html">Goal</a>
+            </li>
           </ul>
         </div>
       </nav>
     <section class="borderBio">
       <div class="bio2">
+        <!-- image -->
+
         <img src="download1.jpg" class="img2" alt="studying_image.jpg">
+        <!-- text -->
+
         <h1 class="p1">ABOUT ME</h1>
-        <p class="p1"> Alex Nguyen is 21 years old. He's born and raised in Springfield Missouri that he still lives in. Alex likes to help people around him, no matter how hard and how much of a struggle it is; he does his best to try to help. Alex strives for success, no matter the situation he alway brings his A game and finds a way to make the best out of a bad situation.
+        <p class="p1"> Alex Nguyen is 21 years old. He's born and raised in Springfield, Missouri that he currently lives in. Alex likes to help people around him, no matter how hard and how much of a struggle it is; he does his best to try to help. Alex strives for success, no matter the situation he alway brings his A game and finds a way to make the best out of a bad situation.
 <!--        <p class="p1"> Alex Nguyen is a student at OTC. He is a hard working student. His hobbies are to surf the web and play games. Alex likes to take challenges and excels under stress and pressure.</p> -->
       </div>
     </section>
+    <!-- Map of Springfield -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101724.48154924274!2d-93.36636473304452!3d37.179083887863385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87cf62f745c8983f%3A0x6bfd6cb31e690da0!2sSpringfield%2C%20MO!5e0!3m2!1sen!2sus!4v1589399307192!5m2!1sen!2sus" width="250" height="227" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
   </body>
 </html>
