--- a/experience.html
+++ b/experience.html
@@ -23,22 +23,37 @@
             <a class="nav-link text-white bg-dark" href="index.html" style="text-align: left;">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white bg-dark" href="aboutMe.html" style="text-align: center;">Bio</a>
+            <a class="nav-link text-white bg-dark" href="aboutMe.html" style="text-align: center;">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white bg-dark" href="experience.html">Experiences</a>
           </li>
-<!--          <li class="nav-item">
-            <a class="nav-link text-white bg-dark" href="contact.html">Contact</a>
-          </li>  -->
+          <li class="nav-item">
+            <a class="nav-link text-white bg-dark" href="goal.html">Goal</a>
+          </li>
         </ul>
       </div>
     </nav>
+    <!-- title of experience -->
 
-    <section>
+    <h1 style="text-align:center;"> Experience and Taken Classes </h1>
+    <!-- body text of page -->
+
+    <section class="exp-sec">
       <div>
-        <h1>
+        <h3> Experience/Work </h3>
+        <p class="p2">I have worked a couple of jobs in business and marketing, working cashier and stacking shelves with products.</p>
+      </div>
+    </section>
+    <section class="exp-sec">
+      <div>
+        <h3>Classes I have taken throughout my college life</h3>
+        <p class="p2">I have taken most of my general ED classes such as: mathematical science, written comm., oral/written comm. and natural sciences. I have also taken 2 CiS classes which are CiS-101-115 and CiS-120-101.</p>
+        <!-- link and footer -->
 
+        <footer class="footer-exp">
+          <p>here is a link to <a href="https://my.otc.edu/" target="_blank">OTC</a></p>
+        </footer>
       </div>
     </section>
   </body>
