made some changes

--- a/experience.html
+++ b/experience.html
@@ -36,7 +36,7 @@
     </nav>
     <!-- title of experience -->
 
-    <h1 style="text-align:center;"> Experience and Taken Classes </h1>
+    <h1 style="text-align:center;"> Experience and Taken/Planned Classes </h1>
     <!-- body text of page -->
 
     <section class="exp-sec">
@@ -49,6 +49,13 @@
       <div>
         <h3>Classes I have taken throughout my college life</h3>
         <p class="p2">I have taken most of my general ED classes such as: mathematical science, written comm., oral/written comm. and natural sciences. I have also taken 2 CiS classes which are CiS-101-115 and CiS-120-101.</p>
+      </div>
+    </section>
+    <section class="exp-sec">
+      <div>
+        <h3> Planned Classes</h3>
+        <p class="p2">I plan on taking: CiS-170(Java Programming), CiS-250(Database and Query), CiS-230(Systems Analysis & Design), CiS-240(Mobile App Development) and CiS-160(Software Engineering Project)</p>
+
         <!-- link and footer -->
 
         <footer class="footer-exp">
