--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h1 style="text-align:center; color:DodgerBlue;"> </h1>
       <h1 style="text-align:center;">My name is Alex Nguyen.</h1>
       <h2 style="text-align:center; color:gold;">I am a student attending OTC.</h2>
-      <h2 style="text-align:center; color:gold;"> This is my Bio.</h2>
+      <h2 style="text-align:center; color:darkgreen;"> This is my Profile.</h2>
     </div>
   </body>
 </html>
