--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,10 +38,10 @@
       <div class="bio2">
         <!-- image -->
 
-        <img src="download1.jpg" class="img2" alt="studying_image.jpg">
+        <img src="nice_picture_with_laptop.jpg" class="img2" alt="studying_image.jpg">
         <!-- text -->
 
-        <h1 class="p1">ABOUT ME</h1>
+        <h1 class="p1">About Alex Nguyen</h1>
         <p class="p1"> Alex Nguyen is 21 years old. He's born and raised in Springfield, Missouri that he currently lives in. Alex likes to help people around him, no matter how hard and how much of a struggle it is; he does his best to try to help. Alex strives for success, no matter the situation he alway brings his A game and finds a way to make the best out of a bad situation.
 <!--        <p class="p1"> Alex Nguyen is a student at OTC. He is a hard working student. His hobbies are to surf the web and play games. Alex likes to take challenges and excels under stress and pressure.</p> -->
       </div>
