--- a/goal.html
+++ b/goal.html
@@ -36,8 +36,23 @@
     </nav>
   <!-- title of goal -->
 
-    <h1 style="text-align:center;"> Goals </h1>
+    <h1 style="text-align:center;"> Goals/Dreams </h1>
+    <!-- Main Text -->
+    <section class="exp-sec">
+      <div>
+        <h3> Goal </h3>
+        <p>My goal is to transfer to Rolla and get into <a href="https://www.mst.edu/" target="_blank"> Missouri S&T</a>(Missouri University of science and Technology). From there I would like to work my hardest and try to become an IT(Information Technology). And from there I would like to have a nice job with a stable income.</p>
 
+      </div>
+    </section>
+    <!-- Map of Rolla, Missouri S&T -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50331.96439560071!2d-91.79102056358201!3d37.95967490975768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87da54c5e8b574af%3A0x580c89d73ccc6dd6!2sMissouri%20University%20of%20Science%20and%20Technology!5e0!3m2!1sen!2sus!4v1589421749777!5m2!1sen!2sus" width="950" height="250" frameborder="0" style="border:0; margin-left:20%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <section class="exp-sec">
+      <div>
+        <h3> Dream </h3>
+        <p>My dream is to live a peaceful life with a family. I wish to meet the special someone for me and to start a family, I prefer to have 2 kids; a son and a daughter. From there teach them how to become independent and to spoil them but not to spoil them rotten.</p>
+      </div>
+    </section>
 
 
   </body>
